examples/test/testpolicy10021.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10021
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key35: value48
      key3: value3
      key12: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value3
          key40: value14
      podSelector:
        matchLabels:
          key18: value20
